--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <p id="demo">Grid Size</p>     
             </div>
         </div>
+        <div id="copywrite">© SSA 2022</div>
         
     </body>
 </html>
